potentially fixed on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,8 @@ a {
   color: inherit;
 }
 body {
+  background-size: cover;
+  background-repeat: no-repeat;
   text-align: center;
   background-color: rgb(0, 0, 0);
   color: white
